--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,34 @@
 atomicwrites==1.4.0
 attrs==21.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.1
 colorama==0.4.4
 coverage==5.5
+docopt==0.6.2
 Flask==2.0.1
--e.
+Flask-Paranoid==0.2.0
+Flask-ReCaptcha==0.4.2
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 packaging==21.0
+pipreqs==0.4.11
 pluggy==1.0.0
 pretty-errors==1.2.24
 psycopg2==2.9.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.5
+requests==2.26.0
 SQLAlchemy==1.4.26
 toml==0.10.2
+urllib3==1.26.7
 waitress==2.0.0
 Werkzeug==2.0.1
+yarg==0.1.9
